@@ -1,6 +1,13 @@
 lazy val akkaHttpVersion = "10.1.8"
 lazy val akkaVersion    = "2.6.0-M2"
 
+javaOptions in Universal ++= Seq(
+  "-J-XX:+UseConcMarkSweepGC",
+  "-J-XX:+ScavengeBeforeFullGC",
+  "-J-XX:+CMSScavengeBeforeRemark",
+  "-Xmx512m",
+  "-Xms512m")
+
 lazy val root = (project in file(".") enablePlugins (Cinnamon, JavaAppPackaging)).
   settings(
     inThisBuild(List(
@@ -11,13 +18,16 @@ lazy val root = (project in file(".") enablePlugins (Cinnamon, JavaAppPackaging)
     cinnamon in run := true,
     cinnamon in test := true,
     libraryDependencies ++= Seq(
-      Cinnamon.library.cinnamonCHMetrics,
+      Cinnamon.library.cinnamonPrometheus,
+      Cinnamon.library.cinnamonPrometheusHttpServer,
       Cinnamon.library.cinnamonAkkaStream,
       Cinnamon.library.cinnamonAkkaHttp,
       "com.typesafe.akka" %% "akka-http"            % akkaHttpVersion,
       "com.typesafe.akka" %% "akka-http-spray-json" % akkaHttpVersion,
       "com.typesafe.akka" %% "akka-http-xml"        % akkaHttpVersion,
       "com.typesafe.akka" %% "akka-stream"          % akkaVersion,
+      "com.typesafe.scala-logging" %% "scala-logging"   % "3.9.2",
+      "ch.qos.logback"             %  "logback-classic" % "1.2.3",
 
       "com.typesafe.akka" %% "akka-http-testkit"    % akkaHttpVersion % Test,
       "com.typesafe.akka" %% "akka-testkit"         % akkaVersion     % Test,
